<resources>
    <string name="app_name">Stocker</string>
    <string name="btnRegEmp">Registrarse</string>
    <string name="btnExit">Volver</string>
    <string name="LbIntReg">Introduzca los datos de su empresa</string>
    <string name="txtNomb">Nombre:</string>
    <string name="txtLoc">Ciudad:</string>
    <string name="txtCodigo">Código:</string>
    <string name="BotStrTienda">Buscar Tienda</string>
    <string name="botStrProd">Buscar Producto</string>
    <string name="Lbregistro">Eres una empresa?</string>
    <string name="btIniSesi">Iniciar Sesión</string>
    <string name="intNombEmp">Introduce el nombre de tu empresa, la contraseña y su dirección</string>
    <string name="txtCont">Contraseña:</string>
    <string name="registrar_producto">Registrar Producto</string>
    <string name="numero_de_productos">Numero de Productos</string>
    <string name="_1">1</string>
    <string name="tvregProd">Ingrese el nombre del producto y la cantidad que va a cambiar, en positivo o negativo</string>
    <string name="cantidad">Cantidad</string>
    <string name="strCont">Contacto</string>
    <string name="strCompApp">Compartir App</string>
    <string name="strllamar">Llamar</string>
    <string name="strmail">Mail</string>
    <string name="strubi">Ubicación</string>
    <string name="strAcDe">Acerca de…</string>
    <string name="strAccWeb">Acceso a web</string>
    <string name="MiNombre">Antonio Sobrino Martín</string>
    <string name="appname">STOCKER</string>
    <string name="tlf">Contacto</string>
    <string name="Web">Página Web(Opcional):</string>
    <string name="tus_productos">Tus productos:</string>
    <string name="verMs">Ver Más</string>
    <string name="estos_son_nuestros_productos_disponibles">Estos son nuestros productos disponibles:</string>
    <string name="correo_electr_nico">Email(Opcional):</string>
    <string name="registrarse">Registrarse</string>
    <string name="mandar_email">Mandar Email</string>
    <string name="que_es_stocker">¿Que es?</string>
    <string name="reply_title" />
    <string name="pref_nmb">Nombre de Sucursal:</string>
    <string name="direcci_n">Dirección:</string>
    <string name="deseabl">Solo para empresas: Desea que sus datos se almacenen para no tener que iniciar sesion todo el rato?</string>
    <string name="supcont">Quieres que solo te salgan supermercados de una sucursal concreta?</string>
    <string name="ciupref">Decide si quieres limitar tus busquedas a tu ciudad</string>
    <string name="filtrate">filtrar</string>
    <string name="ProductoBuscar">Producto a Buscar</string>
    <string name="guarReg">¿Guardar Registros?</string>
    <string name="mercadona">Mercadona</string>
    <string name="dia">Dia</string>
    <string name="lidl">Lidl</string>
    <string name="eroski">Eroski</string>
    <string name="carrefour">Carrefour</string>
    <string name="consum">Consum</string>
    <string name="musica">¿Activar Musica?</string>
    <string name="registra_una_foto_para_tu_supermercado">Registra una foto para tu supermercado!</string>
    <string name="ingresa_un_video_promocional">Ingresa Un video Promocional!</string>
    <string name="subir_video">Subir Video</string>
    <string name="ver_video_promocional">Ver Video Promocional</string>
    <string name="escuch">Escuchar Cancion Promocional</string>
    <string name="registrar_ubicacion_de_tu_supermercado">Registrar Ubicacion de tu Supermercado</string>
    <string name="mapa">MAPA</string>
    <string name="ver_en_mapa">Ver En Mapa</string>
    <string name="calorias">Calorias:</string>
    <string name="gramos">Gramos:</string>
    <string name="ver_tus_productos">Ver tus productos</string>
    <string name="en_tu_stock">En tu Stock:</string>
    <string name="nombre_producto">Nombre: %1$s</string>
    <string name="indicesano">IndiceSano:</string>
    <string name="calorias_text">Calorías: %1$s kcal</string>
    <string name="gramos_text">Gramos: %1$s g</string>
    <string name="indicesan_text">IndiceSano: %1$s /10</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="preferencias">Preferencias</string>
    <string name="editar_preferencias">Editar Preferencias</string>
    <string name="introduce_tus_datos">Introduce tus datos!</string>
    <string name="usuario">Usuario:</string>
    <string name="email">email:</string>
    <string name="no_tienes_cuenta_registrate">¿No tienes Cuenta? Registrate!</string>
    <string name="nombre_de_usuario">Nombre de Usuario:</string>
    <string name="emailReq">Email:</string>
    <string name="registrese_en_nuestra_app">¡Regístrese en nuestra app!</string>
    <string name="eres_una_empresa_inicia_sesion_aqui">Eres una Empresa? inicia sesion aqui!</string>
    <string name="cantidad_stock_text">Cantidad En Stock: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="ciudad_real">Ciudad Real</string>
    <string name="madrid">Madrid</string>
    <string name="almagro">Almagro</string>
    <string name="puertollano">Puertollano</string>
    <string name="pozuelo">Pozuelo</string>
    <string name="daimiel">Daimiel</string>
    <string name="tomelloso">Tomelloso</string>
    <string name="sevilla">Sevilla</string>
    <string name="cordoba">Cordoba</string>
    <string name="granada">Granada</string>
    <string name="cantidad_en_tu_stock">Cantidad en tu stock: %1$s</string>


    <string name="producto_info_es">El %1$s de %2$s tiene %3$s unidades de %4$s</string>
    <string name="producto_info_en">The %1$s at %2$s has %3$s units of %4$s</string>
    <string name="welcome_message">Bienvenido, %1$s!</string>

    <string name="no_posees_producto_en_stock">No posees este producto en tu stock</string>
    <string name="producto_no_registrado">Producto no registrado en la base de datos</string>
    <string name="tu_campo">Tu %1$s: %2$s</string>
    <string name="campo_actualizado_correctamente">%1$s actualizado correctamente.</string>
    <string name="error_al_actualizar_campo">Error al actualizar %1$s: %2$s</string>
    <string name="actualizar_campo">Actualizar %1$s</string>
    <string name="tu_ciudad">Tu Ciudad: %1$s</string>
    <string name="tu_direccion">Tu Dirección: %1$s</string>
    <string name="tu_pagina_web">Tu Página Web: %1$s</string>
    <string name="tu_correo_electronico">Tu Correo Electrónico: %1$s</string>
    <string name="nombre_no_disponible">Nombre no disponible</string>
    <string name="no_has_registrado_tu_ciudad">No has registrado tu Ciudad</string>
    <string name="no_has_registrado_tu_direccion">No has registrado tu dirección</string>
    <string name="no_has_registrado_tu_pagina_web">No has registrado tu página web</string>
    <string name="no_has_registrado_tu_correo_electronico">No has registrado tu correo electrónico</string>
    <string name="direccion_no_actualizable">Dirección no se puede actualizar.</string>
    <string name="supermercados_con_este_producto">Supermercados Con Este Producto</string>
    <string name="introduzca_los_datos_de_su_cuenta">Introduzca los datos de su cuenta!</string>
    <string name="aquivieneelnombre">AQUIVIENEELNOMBRE</string>
    <string name="tuciud">Tu Ciudad:</string>
    <string name="tu_direccion2">Tu Direccion:</string>
    <string name="tu_pagina_web2">Tu Pagina Web:</string>
    <string name="tu_correo_electronico2">Tu Correo Electronico:</string>
    <string name="gramos2">gramos</string>
    <string name="volver_al_inicio_de_sesion_del_usuario">Volver Al Inicio de Sesion del Usuario</string>
</resources>
