<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/BTNABREINIUSU"
        style="@style/ButtonStyle"
        android:layout_width="184dp"
        android:layout_height="92dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="126dp"
        android:backgroundTint="@color/blue"
        android:onClick="abrirRegistrar"
        android:text="@string/volver_al_inicio_de_sesion_del_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTNABREREG" />

    <EditText
        android:id="@+id/etISC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/txtCont"
        android:inputType="textPassword"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETISN" />

    <TextView
        android:id="@+id/txtintrNomb"
        android:layout_width="263dp"
        android:layout_height="79dp"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/intNombEmp"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ETISN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/txtNomb"
        android:inputType="text"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtintrNomb" />

    <EditText
        android:id="@+id/etOpcDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/direcci_n"
        android:inputType="text"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etISC" />

    <Button
        android:id="@+id/btnIniSec"
        style="@style/ButtonStyle"
        android:layout_width="106dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btIniSesi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOpcDir" />

    <Button
        android:id="@+id/BTNABREREG"
        style="@style/ButtonStyle"
        android:layout_width="180dp"
        android:layout_height="79dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="125dp"
        android:backgroundTint="@color/blue"
        android:onClick="abrirRegistrar"
        android:text="@string/btnRegEmp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniSec" />


</androidx.constraintlayout.widget.ConstraintLayout>