<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngresoProductoFragment">

    <Button
        android:id="@+id/btnGuardarProducto"
        style="@style/ButtonStyle"
        android:layout_width="189dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/registrar_producto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCantProd" />

    <NumberPicker
        android:id="@+id/etCantProd"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productopicker" />
    <Spinner
        android:id="@+id/productopicker"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue"
        android:theme="@style/SpinnerTextColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvtustock" />


    <ImageView
        android:id="@+id/imgProducto"
        android:layout_width="371dp"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvcal"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/calorias"
        android:textColor="@color/blue"
        android:textColorLink="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProducto" />

    <TextView
        android:id="@+id/tvgram"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/gramos"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/tvsano"
        app:layout_constraintStart_toEndOf="@+id/tvcal"
        app:layout_constraintTop_toBottomOf="@+id/imgProducto" />

    <TextView
        android:id="@+id/tvsano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/indicesano"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProducto" />

    <TextView
        android:id="@+id/tvtustock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/en_tu_stock"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvgram" />

</androidx.constraintlayout.widget.ConstraintLayout>
